src/math/twamm/snapshots/evm_ekubo_sdk__math__twamm__sqrt_ratio__tests__high_liquidity_same_sale_rate.snap
---
source: src/math/twamm/sqrt_ratio.rs
expression: "calculate_next_sqrt_ratio(test_case.sqrt_ratio, test_case.liquidity,\ntest_case.token0_sale_rate, test_case.token1_sale_rate,\ntest_case.time_elapsed, test_case.fee,)"
---
680563712996817890757827685335626524192
