src/math/twamm/snapshots/evm_ekubo_sdk__math__twamm__sqrt_ratio__tests__large_exponent_price_sqrt_ratio.snap
---
source: src/math/twamm/sqrt_ratio.rs
expression: "calculate_next_sqrt_ratio(test_case.sqrt_ratio, test_case.liquidity,\ntest_case.token0_sale_rate, test_case.token1_sale_rate,\ntest_case.time_elapsed, test_case.fee,)"
---
Some(
    15141609448466370575819539296664158208000,
)
