src/math/twamm/snapshots/evm_ekubo_sdk__math__twamm__sqrt_ratio__tests__low_liquidity_token0_gt_token1.snap
---
source: src/math/twamm/sqrt_ratio.rs
expression: "calculate_next_sqrt_ratio(test_case.sqrt_ratio, test_case.liquidity,\ntest_case.token0_sale_rate, test_case.token1_sale_rate,\ntest_case.time_elapsed, test_case.fee,)"
---
Some(
    240615969168004511538585310832300654592,
)
