src/math/twamm/snapshots/evm_ekubo_sdk__math__twamm__sqrt_ratio__tests__low_liquiidty_same_sale_ratio.snap
---
source: src/math/twamm/sqrt_ratio.rs
expression: "calculate_next_sqrt_ratio(test_case.sqrt_ratio, test_case.liquidity,\ntest_case.token0_sale_rate, test_case.token1_sale_rate,\ntest_case.time_elapsed, test_case.fee,)"
---
Some(
    340282366920938463463374607431768211456,
)
