src/math/twamm/snapshots/evm_ekubo_sdk__math__twamm__sqrt_ratio__tests__round_in_direction_of_price.snap
---
source: src/math/twamm/sqrt_ratio.rs
expression: "calculate_next_sqrt_ratio(test_case.sqrt_ratio, test_case.liquidity,\ntest_case.token0_sale_rate, test_case.token1_sale_rate,\ntest_case.time_elapsed, test_case.fee,)"
---
481207752340104468493822013619596511452
